# Bria

./: .gitignore  README.md  check_services.sh  docker-compose.yml  fix_postgres_auth.sh  run_all.sh  run_api_gateway.sh  run_forecasting.sh  run_frontend.sh  run_ingestion.sh  setup_postgres_docker.sh  setup_venv.sh  setup_venv_python311.sh  start.sh  start_clean.sh  stop_services.sh  test_api_gateway.sh
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  setup.py
backend/api-gateway/: Dockerfile  __init__.py  main.py  requirements.txt
backend/core/: __init__.py  cache.py  config.py  database.py  logging.py  metrics.py  models.py  rate_limiter.py
backend/database/migrations/: 001_initial_schema.sql  002_openweather_storage.sql
backend/scripts/: check_admin_user.py  check_migrations.sh  create_admin_user.py  create_test_site.py  fix_database.sh  run_migration.py  setup_database.sh  setup_database_no_password.sh  setup_database_simple.sh
backend/services/forecasting/: Dockerfile  __init__.py  forecast_service.py  main.py  requirements.txt
backend/services/forecasting/solar/: __init__.py  ensemble.py  ml_model.py  physics_model.py
backend/services/forecasting/weather/: geocoding.py  openweather.py
backend/services/forecasting/wind/: __init__.py  power_curve.py
backend/services/ingestion/: Dockerfile  __init__.py  main.py  mosquitto.conf  requirements.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  KAFKA_SETUP.md  OPENWEATHER_SETUP.md  PRODUCTION.md  README.md  SECURITY.md  TROUBLESHOOTING_LOGIN.md
monitoring/: prometheus.yml
(+52 files in other folders)
