[tool.poetry]
name = "bria-platform"
version = "2.0.0"
description = "Enterprise renewable energy forecasting platform"
authors = ["Bria Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-json-logger = "^2.0.7"
prometheus-client = "^0.19.0"
aiomqtt = "^2.0.0"
confluent-kafka = "^2.3.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
pvlib = "^0.10.3"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

